src/objects/Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Geo_Location__c</fullName>
        <label>Warehouse Geo Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Warehouse_No__c</fullName>
        <label>Warehouse No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>